# ChangeLog for net-misc/zaptel
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.76 2006/06/08 02:19:26 stkn Exp $

  08 Jun 2006; Stefan Knoblich <stkn@gentoo.org>
  +files/zaptel-1.0.10-fix-zapata-debug-undefined-warnings.diff,
  +files/zaptel-1.0.10-linux2.6.16.diff, zaptel-1.0.10.ebuild:
  Fix zaptel-1.0.10 for linux-2.6.16 and silence some warning messages.

*zaptel-1.2.6 (07 Jun 2006)

  07 Jun 2006; Stefan Knoblich <stkn@gentoo.org>
  +files/zaptel-1.2.6-gentoo.diff, +zaptel-1.2.6.ebuild:
  Version bump, updated to use bristuff-0.3.0-PRE-1p and florz-0.3.0-PRE1o-12,
  devfs26 support has been dropped.

*zaptel-1.2.5-r1 (06 May 2006)

  06 May 2006; Stefan Knoblich <stkn@gentoo.org> +zaptel-1.2.5-r1.ebuild:
  Revision bump, updating to bristuff-0.3.0-PRE-1o and 0.3.0-PRE-1o-florz-12.

  06 May 2006; Stefan Knoblich <stkn@gentoo.org>
  -files/zaptel-1.2.0-gentoo.diff, -zaptel-1.2.0.ebuild,
  -zaptel-1.2.1.ebuild, -zaptel-1.2.3.ebuild:
  Remove old zaptel-1.2.x versions.

*zaptel-1.2.5 (16 Apr 2006)

  16 Apr 2006; Stefan Knoblich <stkn@gentoo.org> +zaptel-1.2.5.ebuild:
  Version bump.

  28 Feb 2006; Stefan Knoblich <stkn@gentoo.org>
  -files/zaptel-bristuff-0.2.0-RC7k.patch,
  -files/zaptel-bristuff-0.2.0-RC8l.patch, -files/zaptel-1.0.3-gentoo.diff,
  -zaptel-1.0.4-r1.ebuild, -zaptel-1.0.6-r1.ebuild,
  -zaptel-1.0.9_p1-r1.ebuild:
  Removed old 1.0.x versions.

*zaptel-1.2.3 (02 Feb 2006)

  02 Feb 2006; Stefan Knoblich <stkn@gentoo.org>
  +files/zaptel-1.2.2-gentoo.diff, +zaptel-1.2.3.ebuild:
  Version bump.

  23 Jan 2006; Stefan Knoblich <stkn@gentoo.org> zaptel-1.2.0.ebuild,
  zaptel-1.2.1.ebuild:
  Fixed SRC_URI.

*zaptel-1.2.1 (16 Dec 2005)

  16 Dec 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/zaptel-1.2.1-gentoo.diff, +zaptel-1.2.1.ebuild:
  Version bump, modified bristuff 0.3.0-PRE1c patch to apply.

*zaptel-1.0.10 (02 Dec 2005)
