@@ -1,0 +1,6 @@
+MD5 215dd795ce8ea72370b2e9d1bb7d8f6a bristuff-0.2.0-RC8q.tar.gz 152037
+RMD160 aaa9ca23eaeb74abc96dd7240f67e7886d4d6ad9 bristuff-0.2.0-RC8q.tar.gz 152037
+SHA256 8ba7a1e1e6ee8e9d77853d6d790d0de5deced7c11679b9b0e108cca817ed9728 bristuff-0.2.0-RC8q.tar.gz 152037
+MD5 a0ee0e7b276abe8ef88030d1252d6a3d zaptel-1.0.10.tar.gz 327832
+RMD160 a797bb36f35e50c51d30705ad1d628f5728d87ed zaptel-1.0.10.tar.gz 327832
+SHA256 7978f3c56a95033bf2bc2cb8d0cb2830c5371aae21e0021503c6dbf2361795d1 zaptel-1.0.10.tar.gz 327832
