@@ -6,4 +6,8 @@
   <email>stkn@gentoo.org</email>
   <name>Stefan Knoblich</name>
 </maintainer>
+<maintainer restrict="&lt;net-misc/zaptel-1.2.0">
+  <email>rajiv@gentoo.org</email>
+  <name>Rajiv Aaron Manglani</name>
+</maintainer>
 </pkgmetadata>
