@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/zaptel
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.76 2006/06/08 02:19:26 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.77 2006/06/11 15:55:27 rajiv Exp $
+
+*zaptel-1.0.10-r1 (11 Jun 2006)
+
+  11 Jun 2006; Rajiv Aaron Manglani <rajiv@gentoo.org> metadata.xml,
+  -zaptel-1.0.10.ebuild, +zaptel-1.0.10-r1.ebuild:
+  force version bump due to new patches.
 
   08 Jun 2006; Stefan Knoblich <stkn@gentoo.org>
   +files/zaptel-1.0.10-fix-zapata-debug-undefined-warnings.diff,
